--- a/abstract.tex
+++ b/abstract.tex
@@ -58,60 +58,26 @@ To explore this hypothesis, we investigate whether the number of reported domest
 
 \subsection{Data description}
 
-Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018\footnote{The first half of 2017 has been excluded due to missing data.}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. \textcolor{red}{Sentence about daily rate and how it compares to previous studies}. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
+Our dataset comprises all crimes and specific types of incidents (such as domestic abuse) that have been reported to the West Midlands Police (the third largest police force in England\autocite{Homeoffice}, serving an estimated 2.9 million people in 2017\autocite{populationfigure}) in the period between 2010 and 2018\footnote{The first half of 2017 has been excluded due to missing data.}. The number of reported domestic abuse cases is the sum of crimes that have a domestic abuse marker, and all domestic abuse incidents. Crimes that have a domestic abuse marker indicate cases of domestic abuse that meet the criteria for notifiable offences in the UK, whereas domestic abuse incidents refer to cases that do not qualify as a crime. For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Domestic abuse cases comprise about 31\% of all recorded crimes and incidents in the dataset, and about 23\% of all domestic abuse cases are alcohol-related. In the period between 2010 and 2018, the daily rate of non-alcohol related domestic incidents falls between 1.6-3 cases per 100,000 individuals, whereas the daily rate of alcohol-related cases falls between 0.35-1 cases per 100,000 individuals. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. All included tournaments took place in the months of June and July.
 
 In the UK, the term "domestic abuse" refers to a wide range of behaviours, from physical and sexual violence to psychological, emotional, financial abuse, threatening behaviour, stalking and harassment either within a family or an intimate relationship\autocite{ONS}. Recent changes to the definition introduced the concept of coercive control, which recognises domestic abuse as a pattern of incidents, which can include any of the above behaviours. Previous research has mostly focused on IPV, which the largest subcategory of domestic abuse. 
 
 
-\begin{table}[ht]
-\centering
-\caption{\textcolor{red}{this table is just for illustration}}
-\begin{tabular}{rrlrrrr}
-  \hline
- & year & Alcohol & No\_days & DA\_cases & Population & Rate \\ 
-  \hline
-1 & 2010 & No & 365 & 23332.00 & 2711938.00 & 2.36 \\ 
-  2 & 2010 & Yes & 365 & 3978.00 & 2711938.00 & 0.40 \\ 
-  3 & 2011 & No & 365 & 20887.00 & 2739733.00 & 2.09 \\ 
-  4 & 2011 & Yes & 365 & 3490.00 & 2739733.00 & 0.35 \\ 
-  5 & 2012 & No & 366 & 15789.00 & 2761887.00 & 1.56 \\ 
-  6 & 2012 & Yes & 366 & 3611.00 & 2761887.00 & 0.36 \\ 
-  7 & 2013 & No & 365 & 22422.00 & 2781753.00 & 2.21 \\ 
-  8 & 2013 & Yes & 365 & 7732.00 & 2781753.00 & 0.76 \\ 
-  9 & 2014 & No & 365 & 27758.00 & 2805891.00 & 2.71 \\ 
-  10 & 2014 & Yes & 365 & 10005.00 & 2805891.00 & 0.98 \\ 
-  11 & 2015 & No & 365 & 30225.00 & 2834490.00 & 2.92 \\ 
-  12 & 2015 & Yes & 365 & 10931.00 & 2834490.00 & 1.06 \\ 
-  13 & 2016 & No & 366 & 31499.00 & 2870551.00 & 3.00 \\ 
-  14 & 2016 & Yes & 366 & 11005.00 & 2870551.00 & 1.05 \\ 
-  15 & 2017 & No & 365 & 12909.00 & 2897303.00 & 1.22 \\ 
-  16 & 2017 & Yes & 365 & 4232.00 & 2897303.00 & 0.40 \\ 
-  17 & 2018 & No & 310 & 28479.00 &  &  \\ 
-  18 & 2018 & Yes & 310 & 9109.00 &  &  \\ 
-   \hline
-\end{tabular}
-\end{table}
-
 Our dataset contains all cases of domestic abuse that have been reported to the police, but the vast majority of all domestic abuse incidents in fact never get reported (according to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police between April, 2017 and March, 2018\autocite{ONS}). This substantial reporting bias, and its potential correlation with other contextual factors warrants a careful interpretation of the estimates from any quantitative study investigating domestic abuse, and highlights the importance of utilising a mixed methods approach to explore the factors facilitating domestic abuse. 
 
-\textcolor{red}{Card \& Dahl find a 10\% increase in male to female violence, in their dataset, daily prevalence of DA is 1.28 per 100,000 population, 10\% increase is 0.128 increase in daily rate, but the average is 0.70 (excluding 2017 and 2018), 60\% increase is 0.42 increase in daily rate}
 
-\clearpage
 
 
 \section{Results}
 
-In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of domestic abuse cases reported to have been perpetrated on that day. To investigate whether national football tournaments affect the number of reported abuse cases, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the tournament (Tournament on), or any other day during the rest of the year (Nonmatch day). 
+In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of domestic abuse cases reported to have been perpetrated on that day. To investigate the link between national football tournaments and the number of reported abuse cases, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the tournament (Tournament on), or any other day during the rest of the year (Nonmatch day). 
 
-Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24--110] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. \TM{Should we comment on the lack of effect for draws and losses?}
-
-Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32--96]). The results also reveal a smaller, 9\%, 95\% CI [1-17] increase on days following an England match day, potentially the result of a temporal spillover effect of the match, and an 8\%, 95\% CI [2-14] decrease in alcohol-related incidents during tournament days that are not England match days, or days after an England match days. \AT{I find this a bit puzzling} \TM{People do all their drinking on days when the matches are on, and are then hungover/working the other days? Repeat perpetrators still being in a cell the next day? I don't think we necessarily need to provide an explanation}
+Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24--110] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. Interestingly, England losses do not result in comparable increases in the number of reported domestic abuse cases. Less surprising is the lack of the effect of draws, probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw. \TM{Should we comment on the lack of effect for draws and losses?} \AT{do you think I should move the relevant discussions up here? I was trying to avoid having to make lots of references to the appendix in the first part of the manuscript, e.g. replication of Kirby, robustness of the effect to year exclusions etc.}
 
 
-
-\begin{table*}
+\begin{table*}[htp]
 \centering
-\scalebox{0.9}{
+\scalebox{0.85}{
   \begin{threeparttable}
   \caption{Number of reported domestic abuse incidents by alcohol involvement and type of day} 
   \label{specifications}
@@ -160,10 +126,15 @@ AIC & 45,539.500 & 45,536.770 & 45,530.360 & 41,959.280 \\
 \end{threeparttable} }
 \end{table*}
 
-To explore where this increase comes from, we investigate whether the effect is sensitive to the gender of the perpetrator and the victim. Previous qualitative research has suggested that the link between football and domestic abuse is a result of violent expression of masculinity, where heavy drinking is also often present\autocite{Sabo}. If this was the case, we would expect football and alcohol to only affect reported numbers of male-perpetrated domestic abuse. 
+Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32--96]). The results also reveal a smaller, 9\%, 95\% CI [1-17] increase in non-alcohol related cases on days following an England match day, potentially the result of a temporal spillover effect of the match. We also see an 8\%, 95\% CI [2-14] decrease in alcohol-related cases during tournament, but not England match days, perhaps stemming from heavy drinking being mostly concentrated around England match (and particularly England win) days, and relatively lower alcohol consumption on other days during the tournament. 
 
 
-The first column of Table \ref{gender_regression} shows the result for different offender-victim gender groups. The results show that the effect is only present in the subgroup of Male to Female abuse (which comprises about 80\% of all domestic abuse cases in our data), where the increase is 67\%, 95\% CI [35--107]. These results can be viewed in light of the observation that British football fandom is prevalently male-dominated \autocite{Parry2014}, and they lend support to the hypothesis that masculinity construction and alcohol may be key to the link between football and domestic abuse.
+
+To explore the characteristics of this increase, we investigate whether the effect is sensitive to the gender of the perpetrator and the victim. Previous qualitative research has suggested that the link between football and domestic abuse is a result of violent expression of masculinity, where heavy drinking is also often present\autocite{Sabo}. If this was the case, we would expect football and alcohol to only affect reported numbers of male-perpetrated domestic abuse. 
+
+
+The first column of Table \ref{gender_regression} shows the result for different offender-victim gender groups. The results show that the effect is only present in the subgroup of Male to Female abuse (which comprises about 80\% of all domestic abuse cases in our data), where the increase is 67\%, 95\% CI [35--107]. These results can be viewed in light of the observation that British football fandom is prevalently male-dominated \autocite{Parry2014}, and they lend support to the hypothesis that masculinity construction and alcohol may be key to the link between football and domestic abuse.  
+
 
 \begin{table}
 \centering
@@ -221,9 +192,9 @@ Observations & 6,034 & 6,034 & 6,034 & 6,034 \\
 \end{table}
 
 
-Our unique dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (including burglary, theft and robbery), public order offences (behaviours that cause offence to the general public), hate crimes (hate incidents and any other racially or religiously aggravated crime), and other violent crimes (excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family relationships.
+Our unique dataset further allows us to explore whether England games have similar effects on other types of criminal behaviours. Specifically, we are interested in how an England match day affects the number of reported property-related crimes (including burglary, theft and robbery), public order offences (behaviours that cause offence to the general public), hate crimes (hate incidents and any other racially or religiously aggravated crime), and other violent crimes (excluding cases of domestic abuse). Of particular interest is the effect of football on non-domestic violent crimes, since it is possible that alcohol-fuelled violence that follows an England victory is not limited to family and intimate partner relationships.
 
-Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after and England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from Male to Female cases (although Male to Male and Female to Male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results strongly suggest that football and alcohol only make men more violent and mostly towards women. \AT{Is this too harsh? I added this analysis because I think it strengthens our point about how football makes men more violent. Also I wonder why they would beat up women they don't know - can be a result of the noisiness of the DA indicator?} \TM{I think this is very good}
+Table \ref{othertype_regression} shows the results from a series of negative binomial regression for different types of criminal behaviours. These reveal that while property-related offences are not affected by football, there is an increase in the number of non-alcohol related public order offence cases on tournament days, when England wins, and on days after and England game. Hate incidents with no alcohol involvement also increase when the tournament is on. But most importantly, we find a similar pattern for other violent crimes, namely, a 55\%, 95\% [43--72] increase in alcohol-related violent offences when England wins, and a smaller increase on days following an England match. This result highlights that football-induced and alcohol-related violent behaviour is not limited to family relationships. Further analysis reveals that the increase in these alcohol-related non-domestic violent crimes also predominantly comes from male to female cases (although male to male and female to male cases also contribute, see Table \ref{othertype_regression} in the Appendix). These results strongly suggest that football and alcohol make men more violent and mostly towards women. 
 
 
 
@@ -309,7 +280,7 @@ Based on the pre-match betting odds, all England victories were expected in our 
 
 %In the context of the World Cup, previous research has reported elevated testosterone levels amongst the winning team's supporters\autocite{Bernhardt1998}.
 
-The largest England-based study found that an England loss results in the largest increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a markedly different pattern, in that it is when England wins we find a substantial increase in alcohol-related domestic abuse, whereas we found no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws (probably due to the fact that high-stake matches after the group-stage in the tournament cannot result in a draw). A stark difference between our results is the lack of an England loss effect in our sample. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling given that these are \textit{national} football tournament matches.
+The largest England-based study found that an England loss results in the largest increase (38\%) in domestic abuse, and a win or draw have a slightly smaller effect (26\%)\autocite{Kirby2014}. We find a markedly different pattern, in that it is when England wins we find a substantial increase in alcohol-related domestic abuse, whereas we found no comparable effects for an England loss. Upon re-analysing their data by treating wins and draws as two separate variables (resulting in an improved model fit, see Table \ref{kirbyrep1} in the Appendix), we see a roughly similar effect for wins (45\%, 95\% CI [28--64]) and losses (39\%, 95\% CI [18--64]), and no effect when England draws. A stark difference between our results is the lack of an England loss effect in our sample. While our study is different in a few aspects (West Midlands 2010-2018 vs Lancashire, 2002, 2006, 2010), the discrepancy is still puzzling given that these are \textit{national} football tournament matches.
 
 To explore the underlying reason for this discrepancy and test the robustness of our results, we find it instructive to analyse the the patterns by specific tournament years for the two datasets (see Table \ref{kirbyrep2} in the Appendix). An interesting common pattern in both datasets is the large effect of England's victory over Slovenia in the group stage of the 2010 World Cup, which, after much anticipation, secured their progression to the next stage of the tournament. Equally, the subsequent loss against Germany in the knockout stage resulted in a substantial increase in the number of reported domestic abuse incidents, which is the only tournament in our dataset where this pattern appears. While the effect of a victory or loss is likely to be highly specific to the context of a particular match (e.g., group stage or knockout stage, previous performance of the team, weather on the day, etc.), the estimated effect of an England victory on the number of reported domestic abuse cases is robust to different model specifications (see Table \ref{specifications}),  using data from a different geographical area (see Table \ref{kirbyrep2} in the Appendix), and the exclusion of specific tournament years (see Table \ref{robustness} in the Appendix). \TM{Do we also want to emphasize the differnce in sample size, and representativeness between west mids and Lancashire?}
 
