--- a/abstract.tex
+++ b/abstract.tex
@@ -45,9 +45,9 @@ Understanding the factors that contribute to the occurrence of violence in famil
 
 In England, most studies have focused on the link between football (soccer) and domestic abuse. Football's history is inextricably linked to England, and it is by far the most popular sport in the country \autocite{Parry2014}, with the 2018 World Cup attracting record number of viewers \autocite{BBC}. In 2012, a small, exploratory study investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England\autocite{Brimicombe2012}. Using a control period from 2009, the study found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days when they drew. A more specific investigation, using daily counts of domestic abuse in Lancashire from the 2002, 2006 and 2010 World Cup, found a 38\% increase in the number of reported domestic violence cases when the England team lost, and a 26\% increase when they won or drew\autocite{Kirby2014}. These estimates had been widely discussed in the British media before the 2018 World Cup, and the figures were also quoted on the posters in the Not-so Beautiful Game Campaign. While domestic abuse is predominantly understood as a pattern of ongoing behaviour involving a series of occurrences, rather than a one-off incident triggered by football \autocite{Brooks-Hay2018}, these studies, and other qualitative investigations\autocite{Swallow} nevertheless suggest that national football tournaments can create an environment for abusers that is conducive to domestic abuse.
 
-Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of "Englishness", fuelled by media narratives that often use war references and a "us vs. them" rhetoric to generate and represent an English national identity\autocite{Vincent2014}. Previous qualtitatve research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo,Swallow}. We speculate that this observation is especially pertinent in the context of England's participation in national tournaments, owing to the popularity of the sport in the country, the associated media attention, and the heightened sense of national consciousness.
+Why would national football tournaments, such as the World Cup or the European Championship precipitate domestic abuse? England's participation in these tournaments are times of heightened patriotic emotions and a strengthened sense of "Englishness", fuelled by media narratives that often use war references and a "us vs. them" rhetoric to generate and represent an English national identity\autocite{Vincent2014}. Previous qualitative research has suggested that televised contact sports can serve as vehicle for the male sports fan to redefine and express his masculinity in a way that allows dominance, control, and can ultimately manifest in the perpetration of domestic abuse, given susceptibility to such behaviours\autocite{Sabo,Swallow}. We speculate that this observation is especially pertinent in the context of England's participation in national tournaments, owing to the popularity of the sport in the country, the associated media attention, and the heightened sense of national consciousness.
 
-Qualitative investigations suggest that alcohol can be a significant factor in the link between football and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is never the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol suggest that for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. 
+Qualitative investigations suggest that alcohol can be a significant factor in the link between football and domestic abuse. Alcohol has a strong association with domestic abuse, those with alcohol-problems are more likely to be perpetrators, and when alcohol is involved, there is evidence that the violence might result in more serious injuries \autocite{Peralta2010}. However, it is generally understood that the role of alcohol should be considered in the context of a range of social, biological and pyschological factors, and that alcohol is not the direct cause of domestic abuse \autocite{Javaid2015,Peralta2010}. One explanation for the co-occurrence of domestic abuse and alcohol is that, for some men, drinking and violence plays an instrumental role in the construction and expression of masculinity, especially when the problem of masculine deficiency is present (e.g., by unemployment)\autocite{Peralta2010}. 
 
 In the US, the relationship between unexpected NFL losses and IPV did not depend on alcohol-involvement in the incident\autocite{Card2011}. While England-based quantitative studies did not look at the role of alcohol in particular. Given the strong association between drinking culture and football in England\autocite{Dixon2014}, a relationship continuously reinforced by the marketing practices of the alcohol industry\autocite{Gornall2014}, we hypothesize that alcohol play an important role in the relationship between national football tournaments and domestic abuse.
 
@@ -103,7 +103,7 @@ Our dataset contains all cases of domestic abuse that have been reported to the 
 
 In the following regressions, each observation is a day in the period between 2010 and 2018, and the outcome variable is the number of domestic abuse cases reported to have been perpetrated on that day. To investigate whether national football tournaments affect the number of reported abuse cases, we classify each day in our dataset as either a day on which England won (England win), lost (England lost) or drew (England draw), a day after an England match day (After England), any other day during the tournament (Tournament on), or any other day during the rest of the year (Nonmatch day). 
 
-Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24--110] increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. \TM{Should we comment on the lack of effect for draws and losses?}
+Using a series of negative binomial regressions, we first compare various, increasingly complex model specifications to understand the relationship between football, alcohol and domestic abuse. Adding type of day as an explanatory variable to a model with only alcohol and time controls marginally improves the model fit (see column 2 in Table \ref{specifications}), and the results show a 20\%, 95\% CI [5--38] increase in the number of reported domestic abuse cases when the England national football team wins. The comparison between column 2 and 3 reveals that this increase stems from a much more pronounced, 61\%, 95\% CI [24\%--110\%] \NS{Add \% units to CIs throughout}  increase within the subgroup of alcohol-related domestic abuse cases on days when England wins. \TM{Should we comment on the lack of effect for draws and losses?}
 
 Further interacting alcohol with the rest of the time-specific control variables results in a substantially improved model fit (see column 4), but does not alter the effect of an England win on alcohol-related domestic abuse (61\%, 95\% CI [32--96]). The results also reveal a smaller, 9\%, 95\% CI [1-17] increase on days following an England match day, potentially the result of a temporal spillover effect of the match, and an 8\%, 95\% CI [2-14] decrease in alcohol-related incidents during tournament days that are not England match days, or days after an England match days. \AT{I find this a bit puzzling} \TM{People do all their drinking on days when the matches are on, and are then hungover/working the other days? Repeat perpetrators still being in a cell the next day? I don't think we necessarily need to provide an explanation}
 
